kubernetes-training/node-red/namespace.yaml
#############
# Namespace #
############
---
apiVersion: v1
kind: Namespace
metadata:
  name: node-red
