kubernetes-training/node-red/deployment.yaml
#############
# Deployment #
#############
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red-app
  namespace: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red-app
  template:
    metadata:
      labels:
        app: node-red-app
    spec:
      containers:
        - name: node-red-app
          image: nodered/node-red
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1880
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: node-red-app-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: node-red-app-config
          configMap:
            name: node-red-app
            items:
              - key: "project.conf"
                path: "in-project.conf"
